Version 0.0.2 (not yet released):
- cvtool: Improved int/double array option handling.
- cvtool: Added a layer command.
- CVL: Added cvl_frame_layer().
- cvtool: Changed channel command: extract as graylevel, and allow reversion.
- CVL: cvl_io_(load|save)_pnm(): close file.
- CVL: Add function cvl_sort_array_pixel().
- CVL: Change prototype of cvl_pixel_convert().
- CVL: Export cvl_frame_set_pixel_type()
- CVL: Remove cvl_frame_rgb_to_?() functions
- cvtool/CVL: Minor documentation improvements.
- CVL: Remove cvl_draw_* functions.
- cvtool: Removed grid command.
- cvtool: Added draw command to draw geometric objects, lines, curves, and
  text. The command is a frontend to the CAIRO library.
- Added string_to_utf8() module to notgnulib.
- Gnulib update. Added the following modules:
  xstrndup, localcharset, iconvme.
- CVL: cvl_color_from_string()
  cvtool: All commands that accept color names as options
  Replace rrr,ggg,bbb format with r<val>g<val>b<val>.
- CVL: Add interface to the CAIRO graphics library.
- CVL: Always use 32bit for pixels.
- CVL: Replaced cvl_vector*_t types with simple pointers.
- CVL: Changed cvl_field_get*() functions. Added cvl_field_ref*() functions.
- CVL: cvl_io_read_pnm(), cvl_io_write_pnm(), cvl_io_load_pnm(),
       cvl_io_save_pnm()
  Reworked i/o functions to load/save and read/write pnm files.  
- CVL: cvl_dibr()
  cvtool: dibr
  Prevent integer overflow in (width * 2) when creating stereo frames.

Version 0.0.1:
- initial public release