@@ -15,7 +15,7 @@ read and write streams of NetPBM images (ppm, pgm, pbm) and video streams in
 the YUV4MPEG2 format used by the MJPEG Tools.
 .PP
 Cvtool integrates all its functionality into a single binary, and makes
-it available through commands such as \fBrotate\fP, \fBsmooth\fP, and 
+it available through commands such as \fBrotate\fP, \fBfilter\fP, and 
 others.
 .PP
 \fBcvtool help\fP prints a list of available commands, and
