@@ -88,7 +88,7 @@ read and write streams of NetPBM images (ppm, pgm, pbm) and video streams in
 the YUV4MPEG2 format used by the MJPEG Tools.
 
 Cvtool integrates all its functionality into a single binary, and makes
-it available through commands such as @code{rotate}, @code{smooth}, and 
+it available through commands such as @code{rotate}, @code{filter}, and 
 others.
 
 The following command scales a NetPBM image by a factor of 3:
@@ -270,7 +270,7 @@ Cvtool returns @code{0} on success and @code{1} on error.
 * Mixing frames::
 * Color manipulation::
 * Drawing::
-* Smoothing and Enhancing frames::
+* Filtering frames::
 * Detecting image features::
 * Image analysis::
 * Comparing frames::
@@ -1039,43 +1039,43 @@ $ cvtool draw -u -f "Serif" -F 0.1,0.1 -j center -J center \
 @end example
 
 
-@node Smoothing and Enhancing frames
-@section Smoothing and Enhancing frames
+@node Filtering frames
+@section Filtering frames
 
 @menu
-* smooth::
+* filter::
 * convolve::
 @end menu
 
-@node smooth
-@subsection smooth
-@cmindex smooth
-@code{smooth average [-3|--3d] -k|--k=@var{k}}@*
-@code{smooth average [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
+@node filter
+@subsection filter
+@cmindex filter
+@code{filter average [-3|--3d] -k|--k=@var{k}}@*
+@code{filter average [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
 [-t|--k-t=@var{kt}]}@*
-@code{smooth median [-3|--3d] -k|--k=@var{k}}@*
-@code{smooth median [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
+@code{filter median [-3|--3d] -k|--k=@var{k}}@*
+@code{filter median [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
 [-t|--k-t=@var{kt}]}@*
-@code{smooth gauss [-3|--3d] -k|--k=@var{k}}@*
-@code{smooth gauss [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
+@code{filter gauss [-3|--3d] -k|--k=@var{k}}@*
+@code{filter gauss [-3|--3d] -x|--k-x=@var{kx} -y|--k-y=@var{ky}
 [-t|--k-t=@var{kt}]}@*
-@code{smooth gauss [-3|--3d] [-k|--k=@var{k}] [-x|--k-x=@var{kx}]
+@code{filter gauss [-3|--3d] [-k|--k=@var{k}] [-x|--k-x=@var{kx}]
 [-y|--k-y=@var{ky}] [-t|--k-t=@var{kt}] [-s|--sigma=@var{s}]
 [--sigma-x=@var{sx}] [--sigma-y=@var{sy}] [--sigma-t=@var{st}]}
 
 @noindent
-Smooth frames, in 2D or 3D (with the third dimension being the
+Filter frames, in 2D or 3D (with the third dimension being the
 time).
 
 The kernel size can be given for each dimension, or once for all. It will be
 (2@var{kx}+1)x(2@var{ky}+1)[x(2@var{kt}+1)]. Different values for each
-direction lead to asymmetric smoothing. The gauss filter can be specified by
+direction lead to asymmetric filtering. The gauss filter can be specified by
 the sigma value(s): the mask size will be computed so that roughly 95% of the
 mass lies within the resulting mask. It is also possible to specify both
 @var{sigma} and @var{k}.
 
 @example
-$ cvtool smooth gauss --3d -k 3 < video.y4m > smoothed-video.y4m
+$ cvtool filter gauss --3d -k 3 < video.y4m > smoothed-video.y4m
 @end example
 
 @node convolve
@@ -1499,7 +1499,7 @@ filter is usually applied to the depth maps before depth image based rendering.
 While this further reduces the accuracy of the depth maps, it improves the
 viewing experience.
 @example
-$ cvtool smooth gauss -k 3 \
+$ cvtool filter gauss -k 3 \
   < nasad000.pgm > nasad000-smoothed.pgm
 $ cvtool dibr -d nasad000-smoothed.pgm -b 8 \
   < nasac000.ppm > nasac000-stereo.ppm
@@ -1594,7 +1594,7 @@ be OK!
 Now we can use the same commands to produce a stereoscopic video for anaglyph glasses as in the
 previous section @ref{Creating a stereoscopic image from a single 2D image}:
 @example
-$ cvtool smooth gauss -k 3 \
+$ cvtool filter gauss -k 3 \
   < nasad.pgm > nasad-smoothed.pgm
 $ cvtool dibr -d nasad-smoothed.pgm -b 8 \
   < nasa.y4m > nasa-stereo.y4m
